servers/mysql/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
  - name: phpmyadmin
    port: 80
  - name: mysql
    port: 3306
  selector:
    app: mysql
